Refatora o código passando apiKey como parâmetro
